--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "~TODO~",
+  "name": "Nuages.ioWW",
   "version": "0.0.1",
   "scripts": {
     "dev": "svelte-kit dev",
@@ -9,19 +9,19 @@
     "format": "prettier --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^1.0.0-next.11",
-    "@sveltejs/kit": "next",
-    "autoprefixer": "^10.2.5",
-    "cssnano": "^5.0.1",
-    "postcss": "^8.2.10",
-    "postcss-load-config": "^3.0.1",
-    "prettier": "~2.2.1",
-    "prettier-plugin-svelte": "^2.2.0",
-    "svelte": "^3.34.0",
-    "svelte-preprocess": "^4.7.1",
+    "@sveltejs/adapter-static": "^1.0.0-next.0",
+    "@sveltejs/kit": "^1.0.0-next.1",
+    "autoprefixer":"^10.4.0",
+    "cssnano": "^5.0.13",
+    "postcss": "^8.4.5",
+    "postcss-load-config": "^3.1.0",
+    "prettier": "~2.5.1",
+    "prettier-plugin-svelte": "^2.5.1",
+    "svelte": "^3.44.3",
+    "svelte-preprocess": "^4.10.0",
     "tailwindcss": "^2.1.1",
-    "tslib": "^2.0.0",
-    "typescript": "^4.0.0"
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.4"
   },
   "type": "module"
 }
