--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "format": "prettier --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^1.0.0-next.0",
-    "@sveltejs/kit": "^1.0.0-next.1",
+    "@sveltejs/adapter-static": "next",
+    "@sveltejs/kit": "next",
     "autoprefixer":"^10.4.0",
     "cssnano": "^5.0.13",
     "postcss": "^8.4.5",
