--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
   "name": "nuages-io",
-  "version": "0.0.1",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "preview": "svelte-kit preview",
-    "lint": "prettier --check --plugin-search-dir=. .",
-    "format": "prettier --write --plugin-search-dir=. ."
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "vue": "^3.4.37"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "next",
-    "@sveltejs/kit": "next",
-    "autoprefixer":"^10.4.0",
-    "cssnano": "^5.0.13",
-    "postcss": "^8.4.5",
-    "postcss-load-config": "^3.1.0",
-    "prettier": "~2.5.1",
-    "prettier-plugin-svelte": "^2.5.1",
-    "svelte": "^3.44.3",
-    "svelte-preprocess": "^4.10.0",
-    "tailwindcss": "^2.1.1",
-    "tslib": "^2.3.1",
-    "typescript": "^4.5.4"
-  },
-  "type": "module"
+    "@vitejs/plugin-vue": "^5.1.2",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12",
+    "vite": "^5.4.1"
+  }
 }
